testsuite/tests/patsyn/should_fail/patsyn_where_fail1.hs
{-# LANGUAGE PatternSynonyms #-}

module PatSynWhereFail1 where

pattern P x <- x:xs where
  P { head = x } = [x]
