testsuite/tests/patsyn/should_fail/patsyn_where_fail1.stderr
patsyn_where_fail1.hs:6:3: error: [GHC-28021]
    Record syntax not supported for pattern synonym declarations:
    P {head = x}

